bdr.BDR.scala.error
Compilation error:
BDR:6: error: identifier expected but string literal found.
  if (readMessage():"L"){
                    ^BDR:39: error: ')' expected but '}' found.
} 
^